--- a/Chapter 1 NC fecal v stomach.Rmd
+++ b/Chapter 1 NC fecal v stomach.Rmd
@@ -8,13 +8,15 @@ output: html_document
 Use Phyloseq to visualize NC_Sharks_Data
 ```{r}
 #Load R Global Environment
-setwd("/Users/savannahryburn/Desktop/NC_Sequencing_Data")
+load("../../NC_Sequencing_Data/After_BerryCrust_obi3_lulu_metabaR.RData")
+#setwd("/Users/savannahryburn/Desktop/NC_Sequencing_Data")
 #load("../results_obi3-12-21-22/After_BerryCrust_obi3_lulu_metabaR.RData")
-load("After_BerryCrust_obi3_lulu_metabaR.RData")
+#load("After_BerryCrust_obi3_lulu_metabaR.RData")
 
-load("NC_Sharks_ready_for_phyloseq.RData")
+load("../../NC_Sequencing_Data/NC_Sharks_ready_for_phyloseq.RData")
+#load("NC_Sharks_ready_for_phyloseq.RData")
 
-samples.df<-read.csv("newfilewithpairedcolumn.csv",row.names = "X")
+samples.df<-read.csv("../../NC_Sequencing_Data/newfilewithpairedcolumn.csv",row.names = "X")
 ```
 
 Starting Phlyoseq
@@ -31,9 +33,9 @@ sample_names(NC_Sharks.ps)
 rank_names(NC_Sharks.ps)
 sample_variables(NC_Sharks.ps)
 
-write.csv(clean.otu.df, "combined_NC_Sharks_ready_for_phyloseq_otus_no_empty_pcrs.csv")
-write.csv(samples.df, "combined_NC_Sharks_ready_for_phyloseq_samples.csv")
-write.csv(taxa.df, "combined_NC_Sharks_ready_for_phyloseq_taxa.csv")
+#write.csv(clean.otu.df, "combined_NC_Sharks_ready_for_phyloseq_otus_no_empty_pcrs.csv")
+#write.csv(samples.df, "combined_NC_Sharks_ready_for_phyloseq_samples.csv")
+#write.csv(taxa.df, "combined_NC_Sharks_ready_for_phyloseq_taxa.csv")
 
 NC_Sharks.ps
 
@@ -41,14 +43,14 @@ sample_variables(NC_Sharks.ps)
 ```
 
 ```{r}
-# Transform data to proportions as appropriate for Bray-Curtis distances
+# Transform data to proportions as appropriate for Bray-Curtis distances (changing read counts to RRA, in the prop file)
 
 NC_Sharks.ps.prop <- transform_sample_counts(NC_Sharks.ps, function(otu) otu/sum(otu))
 ord.nmds.bray <- ordinate(NC_Sharks.ps.prop, method="NMDS", distance="bray")
 ```
 
 ```{r}
-# Sort prey into the 20 most common
+# Sort prey into the 20 most common OTUs
 
 top20 <- names(sort(taxa_sums(NC_Sharks.ps), decreasing=TRUE))[0:20]
 ps.top20 <- transform_sample_counts(NC_Sharks.ps, function(OTU) OTU/sum(OTU))
@@ -112,7 +114,7 @@ df3<- df2 %>% select(-"type",-"plate_no",-"plate_col.x",-"plate_row",-"tag_fwd",
 
 colnames(df3)
 
-write.csv(df3, "NC_Sharks_samples_by_species_combined_table.csv")
+#write.csv(df3, "NC_Sharks_samples_by_species_combined_table.csv")
 ```
 
 ```{r}
@@ -151,7 +153,7 @@ colnames(df3)
 #flip the rows and columns
 df4 <- t(df3)
 
-write.csv(df4, "NC_Sharks_samples_by_species_combined_table_all.csv")
+#write.csv(df4, "NC_Sharks_samples_by_species_combined_table_all.csv")
 ```
 
 ```{r}
@@ -174,7 +176,7 @@ NC_Shark_prey_species_merge_paired.ps<-subset_samples(NC_Shark_prey_species_merg
 
 NC_Shark_prey_species_merge_paired.ps
 
-plot_richness(NC_Shark_prey_species_merge_paired.ps, x="Species..scientific.name.","material", measures=c("Shannon", "Simpson"), color="Species..scientific.name.")
+#plot_richness(NC_Shark_prey_species_merge_paired.ps, x="Species..scientific.name.","material", measures=c("Shannon", "Simpson"), color="Species..scientific.name.")
 ```
 
 ```{r}
@@ -1052,7 +1054,7 @@ NC_Shark_prey_species_merge_paired.ps
 
 NC_Shark_prey_species_merge_paired.ps.prop <- transform_sample_counts(NC_Shark_prey_species_merge_paired.ps, function(species) species/sum(species))
 
-# Plot paired samples read proportions by sharkspecies prey genus
+# Plot paired samples read proportions by shark species prey genus
 plot_bar(NC_Shark_prey_species_merge_paired.ps.prop,x="sample_id", fill="genus") + 
   facet_grid(~material~Species..scientific.name., scales="free") +
   geom_bar(aes(color=genus, fill=genus), stat="identity", position="stack")
@@ -1123,6 +1125,7 @@ NC_Shark_prey_species_merge.ps_paired<-subset_samples(NC_Shark_prey_species_merg
 NC_Shark_prey_species_merge.ps_paired
 NC_Shark_prey_species_merge.ps_paired <- transform_sample_counts(NC_Shark_prey_species_merge.ps_paired, function(species) species/sum(species))
 
+# Removing the NAs (anything that wasn't IDed to species gets deleted here)
 NC_Shark_prey_species_merge.ps_paired.1<-tax_glom(NC_Shark_prey_species_merge.ps_paired, taxrank = "species", NArm = TRUE)
 rank_names(NC_Shark_prey_species_merge.ps_paired.1)
 #tax_fix_interactive(NC_Shark_prey_species_merge.ps_paired.1)
@@ -1135,6 +1138,7 @@ NC_Shark_prey_species_merge.ps_paired.1 %>%
   )
 
 top20species_paired <- names(sort(taxa_sums(NC_Shark_prey_species_merge.ps_paired.1), decreasing=TRUE))[0:20]
+#RRA (OTUs = reads)
 NC_Shark_prey_species_merge.ps_paired.1_top20species <- transform_sample_counts(NC_Shark_prey_species_merge.ps_paired.1, function(OTU) OTU/sum(OTU))
 NC_Shark_prey_species_merge.ps_paired.1_top20species <- prune_taxa(top20species_paired, NC_Shark_prey_species_merge.ps_paired.1_top20species)
 
@@ -1186,23 +1190,46 @@ plot_bar(NC_Shark_prey_species_merge.ps_paired.1_top20species,x="sample_id", fil
 ```
 
 ```{r}
-#Now break this up so its by shark species and they are next to eachother
+#Now break this up so its by shark species and they are next to each other
 
-#Now only by shark species (Atlantic sharpnose)
-NC_Shark_prey_species_merge.ps_paired.1_top20species.AtlanticSharpnose<-subset_samples(NC_Shark_prey_species_merge.ps_paired.1_top20species,Species..scientific.name.=="Rhizoprionodon terraenovae")
+#install.packages("remotes")
+#remotes::install_github("vmikk/metagMisc")
+library(metagMisc)
 
-NC_Shark_prey_species_merge.ps_paired.1_top20species.AtlanticSharpnose_plot<-plot_bar(NC_Shark_prey_species_merge.ps_paired.1_top20species.AtlanticSharpnose,x="Species..scientific.name.", fill="species") + 
+#Transform to presence absence
+NC_Shark_prey_species_merge.ps_paired.1.PA <- phyloseq_standardize_otu_abundance(NC_Shark_prey_species_merge.ps_paired.1, method = "pa")
+View(NC_Shark_prey_species_merge.ps_paired.1.PA)
+
+#Top 20
+top20occ = names(sort(taxa_sums(NC_Shark_prey_species_merge.ps_paired.1.PA), decreasing = TRUE)[1:20])
+NC_Shark_prey_species_merge.ps_paired.1.PA.Top20 = prune_taxa(top20occ, NC_Shark_prey_species_merge.ps_paired.1.PA)
+
+#Now only by shark species (Atlantic sharpnose) - this is FOO
+NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose<-subset_samples(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20,Species..scientific.name.=="Rhizoprionodon terraenovae")
+
+library(seqateurs)
+
+#NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose_POO@otu_table <- proportions(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose@otu_table)
+
+View(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose_POO)
+
+length(unique(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose@tax_table$))
+# Per sample
+n.tps=evalq(tapply(species,sample,function(x) length(unique(x))),sealD)
+hist(n.tps)
+mean(n.tps)
+
+NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose_plot<-plot_bar(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose_POO,x="Species..scientific.name.", fill="species") + 
   facet_grid(~material, scales="free", space = "free") +
   geom_bar(aes(color=species, fill=species), stat="identity", position = position_stack()) +
-    theme_classic() +
-  theme(text = element_text(size =11)) +
+    theme_classic() + theme(text = element_text(size =11)) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))+
   scale_fill_discrete(limits = c("Achelous gibbesii", "Achelous spinimanus", "Arenaeus cribrarius", "Callinectes sapidus", "Callinectes similis", "Clibanarius vittatus", "Hexapanopeus angustifrons", "Ovalipes ocellatus", "Penaeus setiferus", 
   "Rimapenaeus constrictus", "Squilla empusa", "Cynoscion nothus", "Cynoscion regalis", "Lagodon rhomboides", "Leiostomus xanthurus", "Myrophis punctatus", "Pomatomus saltatrix", "Synodus foetens", "Trichiurus lepturus", "Xyrichtys novacula")) +
   scale_fill_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Clibanarius vittatus"="gold", "Hexapanopeus angustifrons"="palevioletred", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Pomatomus saltatrix"="slateblue1", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1")) +
   scale_color_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Clibanarius vittatus"="gold", "Hexapanopeus angustifrons"="palevioletred", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Pomatomus saltatrix"="slateblue1", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1"))
 
-NC_Shark_prey_species_merge.ps_paired.1_top20species.AtlanticSharpnose_plot
+NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose_plot
 
 ########################################################################################################################
 
